fix: keep modals off the screen edges on mobile
Bootstrap leaves a dialog almost touching both edges on phones; this
adds a small side margin so modals have a bit of breathing room.

--- a/client/src/StyleSheets/noteModal.css
+++ b/client/src/StyleSheets/noteModal.css
@@ -39,3 +39,9 @@
 .modal.show .modal-dialog {
 	transform: scale(1);
 }
+@media (max-width: 575.98px) {
+	.modal-dialog {
+		margin-left: 1rem;
+		margin-right: 1rem;
+	}
+}
